--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="main">
             <div class="logo">
-                Luriannes's Burgers
+               Mega Restuarant
             </div>
 
             <div>
